# hermes-n8n-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
examples/: hermes-config.yaml
scripts/: set-key.sh
